# vim:set noet ts=4
#
# ibus-typing-booster - The Tables engine for IBus
#
# Copyright (c) 2011-2012 Anish Patil <apatil@redhat.com>
#
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#  This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of 
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#  You should have received a copy of the GNU General Public License 
# along with this program.  If not, see <http://www.gnu.org/licenses/>

SUBDIRS = \
	additional \
	$(NULL)

icons_DATA = \
	ar_TN.svg \
	as_IN.svg \
	be_BY.svg \
	bg_BG.svg \
	bn_IN.svg \
	cs_CZ.svg \
	da_DK.svg \
	de_AT.svg \
	de_CH.svg \
	de_DE.svg \
	el_GR.svg \
	en_AG.svg \
	en_AU.svg \
	en_BS.svg \
	en_BW.svg \
	en_BZ.svg \
	en_DK.svg \
	en_GB.svg \
	en_GH.svg \
	en_HK.svg \
	en_IE.svg \
	en_IN.svg \
        en_JM.svg \
	en_NA.svg \
	en_NG.svg \
	en_NZ.svg \
	en_PH.svg \
	en_SG.svg \
	en_TT.svg \
	en_US.svg \
	en_ZA.svg \
	en_ZW.svg \
	es_ES.svg \
	fa_IR.svg \
	fr_BE.svg \
	fr_CA.svg \
	fr_CH.svg \
	fr_FR.svg \
	fr_LU.svg \
	fr_MC.svg \
	gu_IN.svg \
	he_IL.svg \
	hi_IN.svg \
	hu_HU.svg \
	hy_AM.svg \
	ibus-hunspell-table.svg \
	is_IS.svg \
	it_IT.svg \
	ko_KR.svg \
	km_KH.svg \
	kn_IN.svg \
	ku_TR.svg \
	mai_IN.svg \
	ml_IN.svg \
	mr_IN.svg \
	nb_NO.svg \
	ne_IN.svg \
	ne_NP.svg \
	nl_NL.svg \
	nn_NO.svg \
	or_IN.svg \
	pa_IN.svg \
	pl_PL.svg \
	pt_BR.svg \
	pt_PT.svg \
	ro_RO.svg \
	ru_RU.svg \
	si_LK.svg \
	sv_SE.svg \
	ta_IN.svg \
	te_IN.svg \
	th_TH.svg \
	uk_UA.svg \
	ur_PK.svg \
	yi_US.svg \
	$(NULL)

iconsdir = $(pkgdatadir)/icons

EXTRA_DIST = \
	$(icons_DATA) \
	$(NULL)

MAINTAINERCLEANFILES = \
	Makefile.in \
	$(NULL)

